--- a/reit-reports.html
+++ b/reit-reports.html
@@ -2,19 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>REIT Analysis Reports</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>REIT Reports | Matthew Ibalio Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+    body { font-family: 'Segoe UI', sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333; }
+    header { background:#1a1a1a; color:#fff; padding:30px 20px; text-align:center; }
+    header h1 { margin:0; font-size:2.2rem; }
+    header p { margin:5px 0; }
+    .container { max-width:800px; margin:30px auto; padding:0 20px; }
+    .section { margin-bottom:40px; }
+    .section h2 { font-size:1.5rem; border-bottom:2px solid #ddd; padding-bottom:10px; margin-bottom:20px; }
+    ul { list-style:none; padding:0; }
+    li { background:#fff; border:1px solid #ddd; border-radius:6px; margin-bottom:15px; padding:15px 15px; }
+    li a { color:#0066cc; text-decoration:none; font-weight:bold; }
+    li a:hover { text-decoration:underline; }
+    .back-link { display:inline-block; margin:15px 0; color:#0066cc; text-decoration:none; }
+    .back-link:hover { text-decoration:underline; }
+    footer { text-align:center; font-size:0.9rem; padding:20px; background:#eee; margin-top:40px; }
+    @media (max-width:600px) {
+      header h1 { font-size:1.2rem;}
+      .section h2 { font-size:1.1rem;}
+    }
+  </style>
 </head>
 <body>
-  <h2>REIT Analysis Reports</h2>
-  <ul>
-    <li>
-      <a href="Ibalio Gateway Business Center Investment Memo  (2).pdf" target="_blank">
-        AvalonBay (AVB) REIT Analysis – Read Report (PDF)
-      </a>
-    </li>
-    <!-- Add more REIT reports here -->
-  </ul>
-  <a href="index.html">← Back to Portfolio</a>
+  <header>
+    <h1>Matthew Ibalio</h1>
+    <p>Real Estate Investment & Financial Modeling Portfolio</p>
+    <p>Email: ibalio.matthew@gmail.com | <a href="https://linkedin.com/in/mibalio" style="color:#80d4ff;">LinkedIn</a></p>
+  </header>
+  <div class="container">
+    <div class="section">
+      <h2>REIT Analysis Reports</h2>
+      <ul>
+        <li>
+          <a href="Ibalio Gateway Business Center Investment Memo  (2).pdf" target="_blank">
+            AvalonBay (AVB) REIT Analysis – Read Report (PDF)
+          </a>
+          <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
+        </li>
+        <!-- Add more REIT reports here -->
+      </ul>
+      <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
+    </div>
+  </div>
+  <footer>
+    © 2025 Matthew Ibalio | Built with ❤️ and Excel
+  </footer>
 </body>
 </html>
