--- a/index.html
+++ b/index.html
@@ -4,116 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matthew Ibalio | Real Estate Investment Portfolio</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #1a1a1a;
-      color: #fff;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      margin: 5px 0;
-    }
-    .container {
-      max-width: 960px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
-    .section {
-      margin-bottom: 50px;
-    }
-    .section h2 {
-      font-size: 1.8rem;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 10px;
-      margin-bottom: 20px;
-    }
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-    }
-    .project-card {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 20px;
-      transition: box-shadow 0.2s ease;
-    }
-    .project-card:hover {
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .project-card h3 {
-      margin-top: 0;
-    }
-    .project-card a {
-      text-decoration: none;
-      color: #0066cc;
-      word-break: break-all;
-    }
-    .project-card a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 20px;
-      background: #eee;
-    }
-    .carousel {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #f2f2f2;
-      padding: 20px;
-      border-top: 2px solid #ddd;
-      margin-top: 40px;
-      position: relative;
-      overflow: hidden;
-    }
-    .carousel-content {
-      display: flex;
-      transition: transform 0.6s ease;
-      will-change: transform;
-    }
-    .carousel-item {
-      flex: 0 0 auto;
-      padding: 10px 25px;
-      font-size: 1rem;
-      color: #333;
-      text-decoration: none;
-      border-radius: 4px;
-      background: #fff;
-      margin: 0 10px;
-      border: 1px solid #ccc;
-      white-space: nowrap;
-      cursor: pointer;
-    }
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
-      .section h2 {
-        font-size: 1.4rem;
-      }
-      .projects-grid {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <header>
     <h1>Matthew Ibalio</h1>
