--- a/multifamily-models.html
+++ b/multifamily-models.html
@@ -4,26 +4,7 @@
   <meta charset="UTF-8">
   <title>Multifamily Valuation Models | Matthew Ibalio Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <style>
-    body { font-family: 'Segoe UI', sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333; }
-    header { background:#1a1a1a; color:#fff; padding:30px 20px; text-align:center; }
-    header h1 { margin:0; font-size:2.2rem; }
-    header p { margin:5px 0; }
-    .container { max-width:800px; margin:30px auto; padding:0 20px; }
-    .section { margin-bottom:40px; }
-    .section h2 { font-size:1.5rem; border-bottom:2px solid #ddd; padding-bottom:10px; margin-bottom:20px; }
-    ul { list-style:none; padding:0; }
-    li { background:#fff; border:1px solid #ddd; border-radius:6px; margin-bottom:15px; padding:15px 15px; }
-    li a { color:#0066cc; text-decoration:none; font-weight:bold; }
-    li a:hover { text-decoration:underline; }
-    .back-link { display:inline-block; margin:15px 0; color:#0066cc; text-decoration:none; }
-    .back-link:hover { text-decoration:underline; }
-    footer { text-align:center; font-size:0.9rem; padding:20px; background:#eee; margin-top:40px; }
-    @media (max-width:600px) {
-      header h1 { font-size:1.2rem;}
-      .section h2 { font-size:1.1rem;}
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
