--- a/multifamily-models.html
+++ b/multifamily-models.html
@@ -14,16 +14,18 @@
   </header>
   <div class="container">
     <div class="section">
-      <h2>Multifamily Valuation Models</h2>
-      <ul>
-        <li>
-          <a href="Ibalio Oak Brook Tower ARGUS.pdf" target="_blank">
-            Oak Brook Tower ARGUS Model (PDF)
-          </a>
-          <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-        </li>
-        <!-- Add more models here -->
-      </ul>
+      <h2>Featured Multifamily Models</h2>
+      <p>
+        Detailed scenario analyses of multifamily assets, including DCF and IRR modeling across best, base, and worst-case projections.
+      </p>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Oak Brook Tower ARGUS Model</h3>
+          <p>Scenario analysis for Oak Brook Tower. Includes DCF and IRR calculations, rent growth assumptions, and market comps.</p>
+          <a href="Ibalio Oak Brook Tower ARGUS.pdf" target="_blank">View PDF</a>
+        </div>
+        <!-- Add more models as project-card blocks here -->
+      </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
   </div>
