--- a/reit-reports.html
+++ b/reit-reports.html
@@ -14,16 +14,18 @@
   </header>
   <div class="container">
     <div class="section">
-      <h2>REIT Analysis Reports</h2>
-      <ul>
-        <li>
-          <a href="Ibalio Gateway Business Center Investment Memo  (2).pdf" target="_blank">
-            AvalonBay (AVB) REIT Analysis – Read Report (PDF)
-          </a>
-          <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
-        </li>
-        <!-- Add more REIT reports here -->
-      </ul>
+      <h2>Featured REIT Analysis Reports</h2>
+      <p>
+        In-depth buy/hold/sell recommendations for REITs with macroeconomic insights, peer comps, and regional market outlooks.
+      </p>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>AvalonBay (AVB) REIT Analysis</h3>
+          <p>Full report including valuation comps, macro analysis, and a detailed buy/hold/sell recommendation.</p>
+          <a href="Ibalio Gateway Business Center Investment Memo  (2).pdf" target="_blank">View PDF</a>
+        </div>
+        <!-- Add more REIT reports as project-card blocks here -->
+      </div>
       <a href="index.html" class="back-link">← Back to Portfolio Homepage</a>
     </div>
   </div>
