--- a/MainCode.html
+++ b/MainCode.html
@@ -27,22 +27,22 @@
       <h2>Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <h3>📈 $1,000 Real Investment Portfolio</h3>
-          <p>Live-tracked portfolio focused on real estate, equities, and bonds with monthly updates and performance tracking.</p>
-          <a href="investment-memos.html">View Memos</a>
-        </div>
-        <div class="project-card">
           <h3>🏠 Multifamily Valuation Models</h3>
-          <p>Scenario analysis of a multifamily asset using DCF and IRR modeling across best, base, and worst-case projections.</p>
-          <a href="multifamily-models.html">View Models</a>
+          <p>Scenario analysis and financial modeling for a multifamily asset. Includes downloadable final memo and model.</p>
+          <a href="multifamily-models.html">View Model & Memo</a>
         </div>
         <div class="project-card">
-          <h3>🏢 REIT Analyses and Recommendations</h3>
+          <h3>🏢 Commercial Real Estate Investment Memos using ARGUS</h3>
+          <p>Investment memos and ARGUS models for commercial real estate, including Oak Brook Tower and Gateway Business Center.</p>
+          <a href="commercial-memos.html">View Memos & Models</a>
+        </div>
+        <div class="project-card">
+          <h3>📝 REIT Analysis – AvalonBay (AVB)</h3>
           <p>Buy/Hold/Sell recommendation with macroeconomic insights, valuation comps, and regional outlook.</p>
           <a href="reit-reports.html">View Reports</a>
         </div>
         <div class="project-card">
-          <h3>📊 3-Statement Models </h3>
+          <h3>📊 3-Statement Model – Zillow</h3>
           <p>Comprehensive financial model including ratios, DCF valuation, and strategic insights from public filings.</p>
           <a href="zillow-models.html">View Models</a>
         </div>
@@ -102,5 +102,3 @@
 </script>
 </body>
 </html>
-
-
