--- a/index.html
+++ b/index.html
@@ -5,28 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matthew Ibalio | Real Estate Investment Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Add Google Fonts for modern header style -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Segoe UI', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f7fafd;
-      color: #1a202c;
-    }
     header {
-      background: #222d3c;
+      position: relative;
+      height: 300px;
+      background: url('assets/cover.jpg') center center / cover no-repeat;
       color: #fff;
-      padding: 30px 0 15px 0;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+    /* Semi-transparent overlay for readability */
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(20,30,40,0.65);
+      z-index: 1;
+    }
+    header > * {
+      position: relative;
+      z-index: 2;
     }
     header h1 {
       margin: 0;
-      font-size: 2.6rem;
-      letter-spacing: 1px;
+      font-size: 3rem;
+      font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;
+      font-weight: 700;
+      letter-spacing: 2px;
+      color: #fff;
+      text-shadow: 0 2px 18px #222;
     }
     header p {
-      margin: 6px 0;
-      color: #b5cee8;
+      margin: 8px 0 0 0;
+      color: #dbeaf5;
+      font-size: 1.2rem;
+      text-shadow: 0 1px 6px #222;
+    }
+    header a {
+      color: #80d4ff;
+      font-weight: bold;
+      text-decoration: underline;
+      text-shadow: 0 1px 7px #222;
+    }
+    @media (max-width: 600px) {
+      header { height: 200px; }
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
     }
     .container {
       max-width: 950px;
@@ -225,3 +255,4 @@
 </script>
 </body>
 </html>
+
